--- a/Final-Submission.ipynb
+++ b/Final-Submission.ipynb
@@ -68,7 +68,6 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -97,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "fbbb6c18",
    "metadata": {
     "ExecuteTime": {
@@ -109,8 +108,7 @@
    "source": [
     "# load the data\n",
     "df = pd.read_csv('train_set.csv')\n",
-    "df1 = pd.read_csv('test_set.csv')\n",
-    "sample = pd.read_csv('sample_submission.csv')"
+    "df1 = pd.read_csv('test_set.csv')"
    ]
   },
   {
@@ -256,6 +254,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea116880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['text'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3fa93ec6",
    "metadata": {},
@@ -276,25 +284,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94988894",
+   "execution_count": 5,
+   "id": "ba6152f4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This will remove words that are greater than or equal to three\n",
-    "df['text'] = df['text'].apply(lambda x:' '.join([w for w in x.split() if len(w)>3])) #train set\n",
-    "\n",
-    "df1['text'] = df1['text'].apply(lambda x:' '.join([w for w in x.split() if len(w)>3])) #Test set"
+    "vect = CountVectorizer()\n",
+    "vect.fit(df['text'])\n",
+    "new = vect.transform(df['text'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2fed91c3",
+   "execution_count": 6,
+   "id": "c9ab27a7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['text'].value_counts()"
+    "new2 = vect.transform(df1['text'])\n",
+    "new3 = new2.toarray()"
    ]
   },
   {
@@ -311,48 +319,14 @@
     "    \n",
     "| ⚡ Description: Modelling ⚡ |\n",
     "| :--------------------------- |\n",
-    "| In this section, you are required to create one or more regression models that are able to accurately predict the thee hour load shortfall. |\n",
+    "| In this section, I will create one or more models that will be able to accurately predict the Language. |\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9bf7e6c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.iloc[:30000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "30633ef1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vect = CountVectorizer(max_features = 30000)\n",
-    "vect.fit(df['text'])\n",
-    "new = vect.transform(df['text'])\n",
-    "new1 = new.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a2e05c73",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new2 = vect.transform(df1['text'])\n",
-    "new3 = new2.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1746387e",
    "metadata": {},
    "outputs": [],
@@ -363,32 +337,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e7e1f151",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 30000\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X[:n].toarray(), y[:n], test_size=0.10, random_state=50)"
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.10, random_state=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "68ac361a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "naive_model = MultinomialNB().fit(X_train , y_train)\n",
+    "naive_model = MultinomialNB().fit(X_train , y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "88e8f148",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ypred = naive_model.predict(new3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3f24c0fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Naive Classifier: 0.09\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "print('Accuracy of Naive Classifier: {:.2f}'.format(accuracy_score(y[:5682], ypred)))"
@@ -396,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "4d220e81",
    "metadata": {},
    "outputs": [
@@ -464,7 +455,7 @@
        "4      5     afr"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,35 +587,6 @@
     "output7['lang_id'] = pred_ada\n",
     "output7.to_csv('ada.csv', index=False)\n",
     "output7.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a8ad0c0d",
-   "metadata": {},
-   "source": [
-    "<a id=\"seven\"></a>\n",
-    "## 7. Model Explanations\n",
-    "<a class=\"anchor\" id=\"1.1\"></a>\n",
-    "<a href=#cont>Back to Table of Contents</a>\n",
-    "\n",
-    "---\n",
-    "    \n",
-    "| ⚡ Description: Model explanation ⚡ |\n",
-    "| :--------------------------- |\n",
-    "| In this section, you are required to discuss how the best performing model works in a simple way so that both technical and non-technical stakeholders can grasp the intuition behind the model's inner workings. |\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ff741c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# discuss chosen methods logic"
    ]
   }
  ],
