--- a/Final-Submission.ipynb
+++ b/Final-Submission.ipynb
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea116880",
+   "id": "ed979b63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,30 +359,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "88e8f148",
+   "id": "ed839289",
    "metadata": {},
    "outputs": [],
    "source": [
     "ypred = naive_model.predict(new3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "3f24c0fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy of Naive Classifier: 0.09\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "print('Accuracy of Naive Classifier: {:.2f}'.format(accuracy_score(y[:5682], ypred)))"
    ]
   },
   {
@@ -480,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "413db7ba",
    "metadata": {},
    "outputs": [],
@@ -492,21 +473,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b44d849",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "print('Accuracy of tree Classifier: {:.2f}'.format(accuracy_score(y[:5682], y_pred)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bb24f74c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>lang_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>xho</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>xho</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>ven</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>ssw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>xho</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index lang_id\n",
+       "0      1     xho\n",
+       "1      2     xho\n",
+       "2      3     ven\n",
+       "3      4     ssw\n",
+       "4      5     xho"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "output5 = pd.DataFrame({'lang_id': y_pred})\n",
     "output5 = df1[['index']]\n",
@@ -562,17 +601,6 @@
     "ada_boost =AdaBoostClassifier(base_estimator=None, n_estimators=50, learning_rate=1.0, algorithm='SAMME.R', random_state=42)\n",
     "ada_boost.fit(X_train, y_train)\n",
     "pred_ada = ada_boost.predict(new3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d927105f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "print('Accuracy of Ada Classifier: {:.2f}'.format(accuracy_score(y[:25000], pred_ada)))"
    ]
   },
   {
